# zoho_usable_functions

./: .env.example  .gitignore  277498_ReconciliationLedger_1-Jan-26_to_31-Mar-26.xls  GEMINI.md  INDEX.md  README.md  pyproject.toml
scripts/: check_vc_locations.py  diag_bill_fields.py  export_fan_purchase_items.py  find_zeiss_vendor.py  fix_vc_2603189921.py  inspect_vc_2603189921.py  propose_groups.py  reconcile_gstr2b.py  update_sku_units.py
scripts/books/: fetch_active_customers.py  find_item_transactions.py  find_payment_anomalies.py  find_unused_credits.py  update_bill_items.py  update_customer_mobiles.py
scripts/credit_memos/: process_credit_memo.py
scripts/inventory/: clone_zeiss_items.py  delete_old_items.py  execute_grouping.py  export_item_groups.py  fan_item_sync.py  group_fan_items.py  inactivate_old_items.py  update_adjustment_accounts.py
scripts/payment_reconciliation/: reconcile_payments.py
scripts/reconciliation/: convert_zeiss_pdf.py  create_so_negative_stock.py  find_negative_stock.py  reconcile_bank.py  reconcile_vendor.py  reconcile_zeiss.py  run_reconciliation.py
src/zoho_usable_functions/: __init__.py
src/zoho_usable_functions/core/: auth.py  config.py  customers.py  excel.py  exceptions.py  logging_config.py  models.py
tests/: test_credit_memo_batch.py  test_credit_memo_processor.py  test_gstr2b.py  test_inventory_item_sync.py  test_ledger_cleaner.py  test_ledger_matcher.py  test_payment_anomalies.py  test_payment_reconciliation.py  test_stock.py  test_unused_credits.py  test_usability.py  test_zeiss_pdf.py
(+18 files in other folders)
