[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-usable-functions"
version = "0.1.0"
description = "High-level helper functions and automations on top of Zoho SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "xlrd>=2.0.1",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
